// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextMenu [common] example testing should match snapshot(s) for 1.basic 1`] = `
<span
  className="lucid-ContextMenu"
>
  <Button
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    Target
  </Button>
  <Portal
    className="lucid-ContextMenu-FlyOut lucid-ContextMenu-FlyOut-down"
    portalId="ContextMenu-Portal-7"
    style={
      Object {
        "background": "white",
        "boxShadow": "1px 1px 4px black",
        "minWidth": 0,
        "padding": 4,
      }
    }
  >
    FlyOut
  </Portal>
</span>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for 2.basic-with-text 1`] = `
<span
  className="lucid-ContextMenu"
>
  <Button
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    Target
  </Button>
  <Portal
    className="lucid-ContextMenu-FlyOut lucid-ContextMenu-FlyOut-up"
    portalId="ContextMenu-Portal-8"
    style={
      Object {
        "background": "white",
        "boxShadow": "1px -1px 4px black",
        "minWidth": 0,
        "padding": 4,
      }
    }
  >
    FlyOut
  </Portal>
</span>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for 3.menu-bar 1`] = `
<span
  className="lucid-ContextMenu"
>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "#eaeaea",
        "cursor": "pointer",
        "outline": "solid 1px #d1d1d1",
        "padding": "4px",
      }
    }
  >
    File
  </div>
</span>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for 3.menu-bar 2`] = `
<span
  className="lucid-ContextMenu"
>
  <div
    onClick={[Function]}
    style={
      Object {
        "background": "#eaeaea",
        "cursor": "pointer",
        "outline": "solid 1px #d1d1d1",
        "padding": "4px",
      }
    }
  >
    Edit
  </div>
</span>
`;

exports[`ContextMenu [common] example testing should match snapshot(s) for 4.directions-interactive 1`] = `
<span
  className="lucid-ContextMenu"
>
  Target
  <Portal
    className="lucid-ContextMenu-FlyOut lucid-ContextMenu-FlyOut-down"
    portalId="ContextMenu-Portal-9"
    style={
      Object {
        "background": "white",
        "boxShadow": "1px 1px 4px black",
        "minWidth": 0,
        "padding": 4,
        "width": 210,
      }
    }
  >
    <div>
      direction: default
    </div>
    <div>
      directonOffset: default
    </div>
    <div>
      alignment: default
    </div>
    <div>
      alignmentOffset: default
    </div>
    <div>
      getAlignmentOffset: default
    </div>
  </Portal>
</span>
`;
